force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__AuditLogText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuditLogText__c</fullName>
    <label>Audit Log</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuditLogText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>