force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__DeliveryNetworkOperatorName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryNetworkOperatorName__c</fullName>
    <label>Delivery Network Operator Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryNetworkOperatorName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>