force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__MessageAggregationVendorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessageAggregationVendorId__c</fullName>
    <label>Message Aggregation Vendor Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessageAggregationVendorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>