force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__MessageAggregationVendorStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessageAggregationVendorStatus__c</fullName>
    <label>Message Aggregation Vendor Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessageAggregationVendorStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>