force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__MessageBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessageBatchNumber__c</fullName>
    <label>Message Batch Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessageBatchNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>