force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__rel_1729794853176_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729794853176_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MessageEngagement_PersonalizationCon_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>MessageEngagement_PersonalizationCon_rel</relationshipLabel>
    <relationshipName>rel_1729794853176_end</relationshipName>
    <type>Lookup</type>
</CustomField>