force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SMSCommunicationClass__c.field-meta.xml
<CustomField>
    <fullName>ssot__SMSCommunicationClass__c</fullName>
    <label>SMS Communication Class</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SMSCommunicationClass</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>