force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SMSStandardStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SMSStandardStatus__c</fullName>
    <label>SMS Standard Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SMSStandardStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>