force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SMSTrackingId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SMSTrackingId__c</fullName>
    <label>SMS Message Tracking Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SMSTrackingId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>