force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SubscriptionOptInDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionOptInDateTime__c</fullName>
    <label>Subscription Opt In DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionOptInDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>