force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SubscriptionOptInStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionOptInStatus__c</fullName>
    <label>Subscription Opt In Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionOptInStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>