force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SubscriptionOptOutDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionOptOutDateTime__c</fullName>
    <label>Subscription Opt Out DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionOptOutDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>