force-app/main/default/objects/ssot__MessageEngagement__dlm/fields/ssot__SubscriptionOptOutStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubscriptionOptOutStatus__c</fullName>
    <label>Subscription Opt Out Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubscriptionOptOutStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>